hard-gists/5898352/run.log
=== Docker Run Log for 5898352 ===
Started at: Mi 29. Okt 16:09:34 CET 2025

[2025-10-29 16:09:34] START: Running container for 5898352
[2025-10-29 16:09:34] SUCCESS: Container 0215a2cd7b50fc5cb8c3fddfcb49ec6184e9d38fbf3c32662dd55d42ed9c347c started for 5898352
=== Container logs for 5898352 ===
  File "/snippet.py", line 11
    print len(data[1])
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5898352 ===
[2025-10-29 16:09:36] INFO: Container 0215a2cd7b50fc5cb8c3fddfcb49ec6184e9d38fbf3c32662dd55d42ed9c347c has stopped
